# revo2_description_ros1

./: CMakeLists.txt  README.md  README_CN.md  package.xml
.docker/: Dockerfile  simulate_revo2.entrypoint.sh  visualize_revo2.entrypoint.sh
launch/: display_revo2_left_hand.launch  display_revo2_right_hand.launch  gazebo_revo2_left_hand.launch  gazebo_revo2_right_hand.launch
scripts/: simulate_revo2.sh  visualize_revo2.sh
